Adjust figure image sizing to prevent distortion

--- a/blocks/article-header-post-process/article-header-post-process.css
+++ b/blocks/article-header-post-process/article-header-post-process.css
@@ -1,1 +1,4 @@
 /* No CSS here yet, but this file is required */
+main .figure figure img {
+  max-height: none;
+}
